--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "vite": "^5.2.10"
   },
   "dependencies": {
     "gh-pages": "^6.1.1"
