--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.0",
-    "vite": "^5.2.10"
+    "concurrently": "^8.2.0"
   },
   "dependencies": {
+    "vite": "^5.2.10"
   }
 }
